--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.7
   shared_preferences: ^2.5.2
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
